--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.12.1",
     "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^6.0.5",
     "copy-webpack-plugin": "^6.3.0",
@@ -42,6 +43,7 @@
     "postcss-loader": "^4.0.4",
     "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
     "vue-loader": "^15.9.5",
     "vue-style-loader": "^4.1.2",
