--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --config ./build/webpack.config.dev.js",
-    "build": "webpack --config ./build/webpack.config.prod.js"
+    "new-dev": "webpack-dev-server --config ./build/webpack.dev.js",
+    "build": "webpack --config ./build/webpack.config.prod.js",
+    "new-build": "webpack --config ./build/webpack.prod.js"
   },
   "keywords": [],
   "author": "TK",
@@ -17,6 +19,7 @@
     "@babel/runtime-corejs2": "^7.12.5",
     "axios": "^0.21.0",
     "core-js": "^2.6.11",
+    "eslint-loader": "^4.0.2",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "vue": "^2.6.12",
@@ -34,6 +37,8 @@
     "compression-webpack-plugin": "^6.0.5",
     "copy-webpack-plugin": "^6.3.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.14.0",
+    "eslint-plugin-vue": "^7.1.0",
     "file-loader": "^6.2.0",
     "happypack": "^5.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
